--- a/FoodRecipeApp/MainPage.xaml
+++ b/FoodRecipeApp/MainPage.xaml
@@ -1,24 +1,44 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FoodRecipeApp.MainPage">
+             x:Class="FoodRecipeApp.MainPage"
+             Title="Food Recipe App">
 
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
-        </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
-    </StackLayout>
+    <ContentPage.Content>
+        <RelativeLayout>
+            <Image x:Name="poster" Source="https://thebigmansworld.com/wp-content/uploads/2021/01/almond-flour-pasta4.jpg" Aspect="AspectFill"
+			RelativeLayout.WidthConstraint="{ConstraintExpression
+				Type=RelativeToParent,
+				Property=Width,
+				Factor=1
+				}"
 
+			RelativeLayout.HeightConstraint="{ConstraintExpression
+				Type=RelativeToParent,
+				Property=Height,
+				Factor=0.5
+				}"
+		/>
+            <StackLayout Padding="20"
+			RelativeLayout.YConstraint="{ConstraintExpression
+				Type=RelativeToView,
+				ElementName=poster,
+				Property=Height,
+				Factor=1
+				}" 
+			>
+                <Grid Padding="10" RowSpacing="15" ColumnSpacing="0" >
+                    <Entry Grid.Row="0" Grid.Column="0" Placeholder="Name" PlaceholderColor="LightGray"   FontAttributes="Bold" FontSize="Medium" WidthRequest="100" Margin="0,0,5,0"/>
+                    <Button Grid.Row="0" Grid.Column="1" Text="Search by Name" WidthRequest="100" BackgroundColor="Red" TextColor="white" HeightRequest="60" FontAttributes="Bold" FontSize="Medium" Margin="5,0,0,0"/>
+                    <Entry Grid.Row="1" Grid.Column="0" Placeholder="First letter " PlaceholderColor="LightGray"   FontAttributes="Bold" FontSize="Medium" WidthRequest="100" Margin="0,0,5,0"/>
+                    <Button Grid.Row="1" Grid.Column="1" Text="Search by First letter" FontAttributes="Bold" FontSize="Medium"  BackgroundColor="LightBlue" Margin="5,0,0,0"/>
+                    <Entry Grid.Row="2" Grid.Column="0" Placeholder="Categories" PlaceholderColor="LightGray"   FontAttributes="Bold" FontSize="Medium" WidthRequest="100" Margin="0,0,5,0"/>
+                    <Button Grid.Row="2" Grid.Column="1" Text="Search by Categories" FontAttributes="Bold" FontSize="Medium" BackgroundColor="LightGreen" TextColor="green" Margin="5,0,0,0"/>
+                </Grid>
+                <Button Margin="20,20,20,20" Text="My Favourite Food Recipe" FontAttributes="Bold" FontSize="Medium"  TextColor="red" BackgroundColor="Lightpink" HeightRequest="60"  />
+
+            </StackLayout>
+
+        </RelativeLayout>
+    </ContentPage.Content>
 </ContentPage>
