--- a/FoodRecipeApp/MainPage.xaml
+++ b/FoodRecipeApp/MainPage.xaml
@@ -28,14 +28,15 @@
 				}" 
 			>
                 <Grid Padding="10" RowSpacing="15" ColumnSpacing="0" >
-                    <Entry Grid.Row="0" Grid.Column="0" Placeholder="Name" PlaceholderColor="LightGray"   FontAttributes="Bold" FontSize="Medium" WidthRequest="100" Margin="0,0,5,0"/>
+                    <Entry x:Name="fName" Grid.Row="0" Grid.Column="0" Placeholder="Name" PlaceholderColor="LightGray"   FontAttributes="Bold" FontSize="Medium" WidthRequest="100" Margin="0,0,5,0"/>
                     <Button Grid.Row="0" Grid.Column="1" Text="Search by Name" WidthRequest="100" BackgroundColor="Red" TextColor="white" HeightRequest="60" FontAttributes="Bold" FontSize="Medium" Margin="5,0,0,0" Clicked="Search_By_Name"/>
                     <Entry x:Name="fLetter" Grid.Row="1" Grid.Column="0" Placeholder="First letter " PlaceholderColor="LightGray"   FontAttributes="Bold" FontSize="Medium" WidthRequest="100" Margin="0,0,5,0"/>
                     <Button Grid.Row="1" Grid.Column="1" Text="Search by First letter" FontAttributes="Bold" FontSize="Medium"  BackgroundColor="LightBlue" Margin="5,0,0,0" Clicked="Search_By_FirstLetter"/>
-                    <Entry Grid.Row="2" Grid.Column="0" Placeholder="Categories" PlaceholderColor="LightGray"   FontAttributes="Bold" FontSize="Medium" WidthRequest="100" Margin="0,0,5,0"/>
-                    <Button Grid.Row="2" Grid.Column="1" Text="Search by Categories" FontAttributes="Bold" FontSize="Medium" BackgroundColor="LightGreen" TextColor="green" Margin="5,0,0,0" Clicked="Search_By_Category"/>
+                 
+                   
                 </Grid>
-                <Button Margin="20,20,20,20" Text="My Favourite Food Recipe" FontAttributes="Bold" FontSize="Medium"  TextColor="red" BackgroundColor="Lightpink" HeightRequest="60"  />
+                 <Button Margin="20,20,20,10" Text="Search by Categories" FontAttributes="Bold" FontSize="Medium" BackgroundColor="LightGreen" TextColor="green"  Clicked="Search_By_Category" HeightRequest="60"/>
+                <Button Margin="20,10,20,20" Text="My Favourite Food Recipe" FontAttributes="Bold" FontSize="Medium"  TextColor="red" BackgroundColor="Lightpink" HeightRequest="60"  />
 
             </StackLayout>
 
