--- a/FoodRecipeApp/MainPage.xaml
+++ b/FoodRecipeApp/MainPage.xaml
@@ -36,7 +36,7 @@
                    
                 </Grid>
                  <Button Margin="20,20,20,10" Text="Search by Categories" FontAttributes="Bold" FontSize="Medium" BackgroundColor="LightGreen" TextColor="green"  Clicked="Search_By_Category" HeightRequest="60"/>
-                <Button Margin="20,10,20,20" Text="My Favourite Food Recipe" FontAttributes="Bold" FontSize="Medium"  TextColor="red" BackgroundColor="Lightpink" HeightRequest="60"  />
+                <Button Margin="20,10,20,20" Text="My Favourite Food Recipe" FontAttributes="Bold" FontSize="Medium"  TextColor="red" BackgroundColor="Lightpink" HeightRequest="60" Clicked="MyFavorite_Clicked" />
 
             </StackLayout>
 
