--- a/FoodRecipeApp/SearchName.xaml
+++ b/FoodRecipeApp/SearchName.xaml
@@ -5,51 +5,45 @@
     x:Class="FoodRecipeApp.SearchName"
    Title="Search by Name">
     <ContentPage.Content>
-      
+
         <ScrollView>
-   
-    <StackLayout>
-            
-            <Image Aspect="AspectFill" x:Name="poster2" Source="{Binding strMealThumb}"></Image>
-			
+
+            <StackLayout>
+
+                <Image Aspect="AspectFill" x:Name="poster2" Source="{Binding strMealThumb}"></Image>
+
                 <StackLayout>
                     <Label  Text="{Binding strMeal}" FontAttributes="Bold" FontSize="Large" TextColor="Blue" Margin="20,20,20,0"/>
                 </StackLayout>
 
                 <Grid Margin="20,20,20,20" RowSpacing="0" ColumnSpacing="0" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140"/>
-                </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" FontAttributes="Bold" FontSize="Medium" Text="Category"  />
-                <Label Grid.Row="0" Grid.Column="1"  Text="{Binding strCategory}"  />
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="140"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Row="0" Grid.Column="0" FontAttributes="Bold" FontSize="Medium" Text="Category"  />
+                    <Label Grid.Row="0" Grid.Column="1"  Text="{Binding strCategory}"  />
 
-                <Label Grid.Row="1" Grid.Column="0" FontAttributes="Bold" FontSize="Medium" Text="Area"  />
-                <Label Grid.Row="1" Grid.Column="1" Text="{Binding strArea}"  />
+                    <Label Grid.Row="1" Grid.Column="0" FontAttributes="Bold" FontSize="Medium" Text="Area"  />
+                    <Label Grid.Row="1" Grid.Column="1" Text="{Binding strArea}"  />
 
-                <Label Grid.Row="2" Grid.Column="0" FontAttributes="Bold" FontSize="Medium" Text="Tag" />
-                <Label Grid.Row="2" Grid.Column="1"  Text="{Binding strTags}" />
+                    <Label Grid.Row="2" Grid.Column="0" FontAttributes="Bold" FontSize="Medium" Text="Tag" />
+                    <Label Grid.Row="2" Grid.Column="1"  Text="{Binding strTags}" />
 
-                <Label Grid.Row="3" Grid.Column="0" FontAttributes="Bold" FontSize="Medium" Text="Youtube" />
-                <Label Grid.Row="3" Grid.Column="1" Text="{Binding strYoutube}" />
+                    <Label Grid.Row="3" Grid.Column="0" FontAttributes="Bold" FontSize="Medium" Text="Youtube" />
+                    <Label Grid.Row="3" Grid.Column="1" Text="{Binding strYoutube}" />
 
-            </Grid>
-             <ScrollView VerticalOptions="FillAndExpand">
-            <StackLayout>
-              <Label Text="{Binding strInstructions}"  FontSize="Medium" Margin="20,0,20,20" />
-                <!-- More Label objects go here -->
-                <Button Margin="20,10,20,20" Text="Add to My Favourite Food" FontAttributes="Bold" FontSize="Medium"  TextColor="red" BackgroundColor="Lightpink" HeightRequest="60" Clicked="Button_Clicked" />
+                </Grid>
+                <ScrollView VerticalOptions="FillAndExpand">
+                    <StackLayout>
+                        <Label Text="{Binding strInstructions}"  FontSize="Medium" Margin="20,0,20,20" />
+                        <!-- More Label objects go here -->
+                        <Button x:Name="isFavoriteStr" Margin="20,10,20,20" Text="{Binding str}" FontAttributes="Bold" FontSize="Medium"  TextColor="red" BackgroundColor="Lightpink" HeightRequest="60" Clicked="Button_Clicked" />
+                    </StackLayout>
+
+                </ScrollView>
+
             </StackLayout>
 
-   
-              
         </ScrollView>
-            
-            
-
-        </StackLayout>
-                                 
-         
-    
-          </ScrollView>
-        </ContentPage.Content>
+    </ContentPage.Content>
 </ContentPage>
